--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&display=swap" rel="stylesheet">
     <!-- SheetJS for Excel file support -->
     <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
+    <link rel="icon" href="favicon.png" type="image/png">
     <style>
         * {
             margin: 0;
@@ -266,8 +267,13 @@
             border: none;
             color: white;
             padding: 0.75rem 1.5rem;
-            border-radius: 8px;
-            font-weight: 700;
+            border-radius: 4px; /* Sharper edges for Kaiju feel */
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            position: relative;
+            overflow: hidden;
             cursor: pointer;
             transition: all 0.3s ease;
             font-family: inherit;
@@ -285,6 +291,27 @@
 
         .copy-btn.copied {
             background: var(--success);
+            box-shadow: 0 0 15px var(--success);
+            border-color: var(--success);
+        }
+
+        /* Kaiju Button Effect */
+        .copy-btn::after {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, transparent, rgba(255,255,255,0.1), transparent);
+            transform: rotate(45deg);
+            transition: 0.5s;
+            opacity: 0;
+        }
+
+        .copy-btn:hover::after {
+            opacity: 1;
+            transform: rotate(45deg) translate(50%, 50%);
         }
 
         .copy-btn svg {
@@ -505,22 +532,9 @@
     <header>
         <div class="header-content">
             <div class="logo-icon">
-                <!-- Monster/Kaiju inspired icon -->
-                <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="24" cy="24" r="20" fill="#e63946"/>
-                    <circle cx="17" cy="20" r="4" fill="white"/>
-                    <circle cx="31" cy="20" r="4" fill="white"/>
-                    <circle cx="17" cy="21" r="2" fill="#0a0a0a"/>
-                    <circle cx="31" cy="21" r="2" fill="#0a0a0a"/>
-                    <path d="M14 32 Q24 40 34 32" stroke="#0a0a0a" stroke-width="3" stroke-linecap="round" fill="none"/>
-                    <path d="M12 12 L16 18" stroke="#e63946" stroke-width="2" stroke-linecap="round"/>
-                    <path d="M36 12 L32 18" stroke="#e63946" stroke-width="2" stroke-linecap="round"/>
-                    <polygon points="20,30 22,34 18,34" fill="white"/>
-                    <polygon points="28,30 30,34 26,34" fill="white"/>
-                    <polygon points="24,31 26,35 22,35" fill="white"/>
-                </svg>
+                <img src="favicon.png" alt="Kaiju Icon" style="width: 100%; height: 100%; border-radius: 8px; box-shadow: 0 0 15px var(--accent-red);">
             </div>
-            <h1 class="app-title">ジュデーン</h1>
+            <h1 class="app-title">ジュデーン <span style="font-size: 1rem; color: var(--text-secondary); font-weight: 400; vertical-align: middle; margin-left: 10px;">v0.08</span></h1>
         </div>
     </header>
 
@@ -594,7 +608,7 @@
             <div class="results-header">
                 <div class="results-count">
                     <span>未折り返し件数:</span>
-                    <span class="results-count-badge" id="resultsCountBadge">0</span>
+                    <span class="results-count-badge" id="resultsCountBadge" style="border: 1px solid var(--accent-orange); box-shadow: 0 0 10px rgba(255, 107, 53, 0.3);">0</span>
                 </div>
                 <button class="copy-btn" id="copyBtn">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
